# kopiatan

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
crates/catan-core/: Cargo.toml
crates/catan-core/src/: actions.rs  board.rs  bot.rs  game.rs  hex.rs  lib.rs  player.rs  wasm.rs
crates/catan-core/tests/: integration_tests.rs
crates/catan-server/: Cargo.toml
crates/catan-server/src/: lib.rs  main.rs  protocol.rs  room.rs  server.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Board.tsx  Lobby.tsx  MapEditor.tsx  MultiplayerBoard.tsx  MultiplayerHUD.tsx  PlayerHUD.tsx  SoundControl.tsx  StatsPanel.tsx  TradePanel.tsx
frontend/src/game/: renderer.ts
frontend/src/stores/: gameStore.ts  multiplayerStore.ts  persistenceStore.ts
frontend/src/types/: game.ts
frontend/src/utils/: SoundManager.ts
