[workspace]
resolver = "2"
members = [
    "crates/catan-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mohit"]
license = "MIT"
repository = "https://github.com/anthropics/kopiatan"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
