[package]
name = "catan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core game engine for Kopiatan - a Singapore-themed Catan game"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
