[package]
name = "catan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core game engine for Kopiatan - a Singapore-themed Catan game"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
wasm = ["wasm-bindgen", "getrandom", "console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
